--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,41 @@
     <title>Connect-ED</title>
   </head>
   <body>
+const firebaseConfig = {
+  apiKey: "AIzaSyAQ6NHYjCfGSNJuYLVGewfrNmD77uXjoL8",
+  authDomain: "connected-5c042.firebaseapp.com",
+  databaseURL: "https://connected-5c042.firebaseio.com",
+  projectId: "connected-5c042",
+  storageBucket: "connected-5c042.appspot.com",
+  messagingSenderId: "375211326",
+  appId: "1:375211326:web:ef8a2d550917f321ed186f",
+  measurementId: "G-JCWBQYX6ER"
+};
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAQ6NHYjCfGSNJuYLVGewfrNmD77uXjoL8",
+    authDomain: "connected-5c042.firebaseapp.com",
+    databaseURL: "https://connected-5c042.firebaseio.com",
+    projectId: "connected-5c042",
+    storageBucket: "connected-5c042.appspot.com",
+    messagingSenderId: "375211326",
+    appId: "1:375211326:web:ef8a2d550917f321ed186f",
+    measurementId: "G-JCWBQYX6ER"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
